<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YouFood</string>
    <string name="connection">Connexion</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="tablenumber">Numéro de la table :</string>
    <string name="validate">Valider</string>
    <string name="passercommande">Passer la commande vous-même</string>
    <string name="appelerserveur">Appeler un serveur</string>
    <string name="quantity">Quantité :</string>
    <string name="cancel">Annuler</string>
    <string name="productDetailDescription">Impossible de récupérer la description</string>
    <string name="productDetailPrice">Prix indisponible</string>
    <string name="quantityPrompt">Quantité</string>
    <string name="total">Total</string>
    <string name="order">Commande</string>

</resources>